[bugfix] Card: thumb image align center (#3229)

--- a/packages/card/index.less
+++ b/packages/card/index.less
@@ -18,6 +18,7 @@
   }
 
   &__thumb {
+    display: flex;
     position: relative;
     width: @card-thumb-size;
     height: @card-thumb-size;
